# note_manager

./: CMakeLists.txt  Collection.cpp  Collection.h  CollectionViewer.cpp  CollectionViewer.h  Menu.cpp  Menu.h  Note.cpp  Note.h  Observer.h  README.md  main.cpp
test/: CMakeLists.txt  CollectionTest.cpp  MenuTest.cpp  NoteManagerFixture.cpp  NoteManagerTest.cpp  NoteTest.cpp
